--- a/src/alefba-src/src/App.scss
+++ b/src/alefba-src/src/App.scss
@@ -99,7 +99,7 @@
     }
 
     #catalog-footer-space {
-        height: 47vw;
+        height: 8.875rem;
     }
 
     #utils-sample-space {
