--- a/src/join-us-src/src/App.scss
+++ b/src/join-us-src/src/App.scss
@@ -17,7 +17,7 @@
 .menu {
     z-index: 5;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: #0a0a0a;
     position: absolute;
@@ -36,7 +36,7 @@
     transform: scale(1.2);
     margin-top: 1vw;
     transition: 0.2s;
-    margin-right: 80vw;
+    margin-right: 80.5vw;
     z-index: 1000;
 }
 
